カレンダー画面の追加

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             app:titleTextColor="@color/white" />
 
         <fragment
-            android:id="@+id/navigation"
+            android:id="@+id/main_navigation"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
