--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="lightPrimary">#FFCCBC</color>
     <color name="colorAccent">#536DFE</color>
 
+    <color name="transparentBlack">#80000000</color>
     <color name="primaryText">#212121</color>
     <color name="secondaryText">#757575</color>
     <color name="divider">#BDBDBD</color>
