--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -10,7 +10,8 @@
         android:label="MainFragment" >
         <action
             android:id="@+id/action_mainFragment_to_chooseProductFragment"
-            app:destination="@id/chooseProductFragment" />
+            app:destination="@id/chooseProductFragment"
+            app:launchSingleTop="true" />
     </fragment>
     <fragment
         android:id="@+id/chooseProductFragment"
@@ -19,8 +20,8 @@
         <action
             android:id="@+id/action_chooseProductFragment_to_eventRegisterFragment"
             app:destination="@id/eventRegisterFragment"
-            app:popUpTo="@+id/mainFragment"
-            app:popUpToInclusive="true" />
+            app:launchSingleTop="true"
+            app:popUpTo="@+id/chooseProductFragment" />
     </fragment>
     <fragment
         android:id="@+id/eventRegisterFragment"
