--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#E64A19</color>
     <color name="lightPrimary">#FFCCBC</color>
     <color name="colorAccent">#536DFE</color>
+    <color name="yellow">#ffee33</color>
 
     <color name="transparentBlack">#80000000</color>
     <color name="primaryText">#212121</color>
