--- a/app/src/main/res/layout/custom_add_product_dialog.xml
+++ b/app/src/main/res/layout/custom_add_product_dialog.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -40,6 +39,7 @@
                 android:id="@+id/input_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:singleLine="true"
                 android:hint="@string/add_product_label_input_name_sample"
                 android:text="@={ viewmodel.productName }" />
 
@@ -109,8 +109,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="@string/common_ok"
             android:enabled="@{ viewmodel.isSaveAvailable }"
+            android:text="@string/common_ok"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/input_favorite" />
