--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -3,9 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
+        <import type="android.view.View" />
+
         <variable
             name="viewmodel"
-            type="com.fefeyo.otamanekai.view.calendar.CalendarViewModel"/>
+            type="com.fefeyo.otamanekai.view.calendar.CalendarViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,22 +26,22 @@
 
             <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                 android:id="@+id/calendar"
-                app:mcv_selectionColor="@color/colorPrimary"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                app:mcv_selectionColor="@color/colorPrimary" />
 
         </ScrollView>
 
-        <androidx.recyclerview.widget.RecyclerView
+        <com.fefeyo.otamanekai.view.common.customview.EventListRecyclerView
             android:id="@+id/event_list"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
             android:visibility="gone"
+            android:background="@drawable/background_recycler"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:background="@color/primaryText"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_width="0dp"
-            android:layout_height="200dp"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
